# qsvt-linear-solvers

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  quantinuum_login.py  requirements.txt
.github/workflows/: ci.yml
docs/: generate_readme_figures.py
hardware/: quantinuum_runner.py  run_ibm.py
hardware/ibm_results/: 20260620T071053+0000_ibm_kingston_d8r3pvekodhs7383v6ag.json  20260620T071104+0000_ibm_kingston_d8r3pvekodhs7383v6ag.json  20260620T071117+0000_ibm_kingston_d8r3pvekodhs7383v6ag.json
primitives/: amplitude_amplification.py  block_encoding.py  qsp_qsvt.py
solvers/: hhl_baseline.py  qsvt_linear_solver.py
tests/: test_amplitude_amplification.py  test_block_encoding.py  test_hardware_circuit.py  test_linear_solver.py  test_qsp_qsvt.py
